ACS-11309 Add IngestEventProperties